--- a/themes/butterfly/languages/zh-CN.yml
+++ b/themes/butterfly/languages/zh-CN.yml
@@ -40,13 +40,13 @@ search:
   load_data: 数据库加载中
   algolia_search:
     input_placeholder: 搜索文章
-    hits_empty: '找不到您查询的内容：${query}'
-    hits_stats: '找到 ${hits} 条结果，用时 ${time} 毫秒'
+    hits_empty: "找不到您查询的内容：${query}"
+    hits_stats: "找到 ${hits} 条结果，用时 ${time} 毫秒"
 
   local_search:
     input_placeholder: 搜索文章
-    hits_empty: '找不到您查询的内容：${query}'
-    hits_stats: '共找到 ${hits} 篇文章'
+    hits_empty: "找不到您查询的内容：${query}"
+    hits_stats: "共找到 ${hits} 篇文章"
 
 pagination:
   prev: 上一篇
